# projEchoSignal

./: .gitignore  .pypirc  LICENSE  README.md  pyproject.toml  setup.py
src/: frequency_domain_fncs.py  main_processing_pipeline.py
src/projechosignal/: core.py  frequency_domain_fncs.py  time_domain_fncs.py
tests/: test_time_domain_fncs.py
