[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]

version = "0.1"
name = "Project-Echo-Signal-Processing-Toolbox"
requires-python = ">= 3.11"
readme = "README.md"

dependencies = [
    "numpy",
    "matplotlib",
    "pytest",
    "pytest-cov"
]

maintainers = [
    {name = "Adam Awadalla", email = "aawadalla1@sheffield.ac.uk"},
    {name = "Natsya Lets", email = "alets1@sheffield.ac.uk"},
    {name = "Robin Tyler", email = "rjtyler1@sheffield.ac.uk"},
]

authors = [
    {name = "Adam Awadalla", email = "aawadalla1@sheffield.ac.uk"},
    {name = "Natsya Lets", email = "alets1@sheffield.ac.uk"},
    {name = "Robin Tyler", email = "rjtyler1@sheffield.ac.uk"},
]


[tool.setuptools.packages.find]
where = ["src"]

